[package]
name = "rot-13"
version = "0.1.0"
authors = ["Cameron Phillips <cameron0505@gmail.com>"]
edition = "2018"
description = "rot-13 encryption and decryption"
repository = "https://github.com/cameronp98/rot13-rs.git"
license-file = "LICENSE"
readme = "README.md"

[lib]
name = "rot13"
path = "src/lib.rs"

[[bin]]
name = "rot13"
path = "src/bin/main.rs"

[dependencies]
clap = "2.33"
